Fixing contrast color

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ header {
     background-color: #fff9e6;
     justify-content: space-between;
     align-items: center;
-    color: #b35900;
+    color: #6B3200;
     width: 100%;
     max-width: 1920px;
     height: 70px;
@@ -34,7 +34,7 @@ footer {
 }
 
 .footer {
-    color: #b35900;
+    color: #6B3200;
 }
 
 body {
@@ -75,7 +75,7 @@ main {
 
 nav a {
     text-decoration: none;
-    color: #b35900;
+    color: #6B3200;
     padding: 5px 15px;
     font-size: 15px;
     transition: font-size 0.5s ease-in-out;
